--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo-font": "^11.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
+    "react-devtools": "^4.27.2",
     "react-native": "0.70.5"
   },
   "devDependencies": {
