--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/stack": "^6.3.12",
     "expo": "~47.0.12",
+    "expo-camera": "~13.1.0",
     "expo-font": "^11.0.1",
+    "expo-location": "~15.0.1",
+    "expo-media-library": "~15.0.0",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-devtools": "^4.27.2",
@@ -22,7 +25,8 @@
     "react-native-gesture-handler": "~2.8.0",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0"
+    "react-native-screens": "~3.18.0",
+    "react-native-maps": "1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
