--- a/package.json
+++ b/package.json
@@ -1,40 +1,42 @@
 {
-	"name": "mynewproject",
-	"version": "1.0.0",
-	"main": "node_modules/expo/AppEntry.js",
-	"scripts": {
-		"start": "expo start",
-		"android": "expo start --android",
-		"ios": "expo start --ios",
-		"web": "expo start --web"
-	},
-	"dependencies": {
-		"@react-native-community/masked-view": "^0.1.11",
-		"@react-navigation/bottom-tabs": "^6.5.4",
-		"@react-navigation/native": "^6.1.3",
-		"@react-navigation/stack": "^6.3.12",
-		"@reduxjs/toolkit": "^1.9.2",
-		"expo": "~47.0.12",
-		"expo-camera": "~13.1.0",
-		"expo-font": "^11.0.1",
-		"expo-location": "~15.0.1",
-		"expo-media-library": "~15.0.0",
-		"expo-status-bar": "~1.4.2",
-		"firebase": "^9.17.1",
-		"react": "18.1.0",
-		"react-devtools": "^4.27.2",
-		"react-native": "0.70.5",
-		"react-native-gesture-handler": "~2.8.0",
-		"react-native-maps": "1.3.2",
-		"react-native-reanimated": "~2.12.0",
-		"react-native-safe-area-context": "4.4.1",
-		"react-native-screens": "~3.18.0",
-		"react-redux": "^8.0.5",
-		"remote-redux-devtools": "^0.5.16"
-	},
-	"devDependencies": {
-		"@babel/core": "^7.12.9",
-		"remotedev-rn-debugger": "^0.8.4"
-	},
-	"private": true
+  "name": "mynewproject",
+  "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
+  },
+  "dependencies": {
+    "@react-native-community/cli": "^10.1.3",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.5.4",
+    "@react-navigation/native": "^6.1.3",
+    "@react-navigation/stack": "^6.3.12",
+    "@reduxjs/toolkit": "^1.9.2",
+    "expo": "~47.0.12",
+    "expo-camera": "~13.1.0",
+    "expo-font": "^11.0.1",
+    "expo-location": "~15.0.1",
+    "expo-media-library": "~15.0.0",
+    "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.15.6",
+    "firebase": "^9.17.1",
+    "react": "18.1.0",
+    "react-devtools": "^4.27.2",
+    "react-native": "0.70.5",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-maps": "1.3.2",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-redux": "^8.0.5",
+    "remote-redux-devtools": "^0.5.16"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.9",
+    "remotedev-rn-debugger": "^0.8.4"
+  },
+  "private": true
 }
